Fix name, Window notification, and Dashboard Query

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -11,7 +11,7 @@
             content="default-src 'self'; script-src 'self'"
             http-equiv="X-Content-Security-Policy"
     />
-    <title>Media DBMS</title>
+    <title>MediaDB Manager</title>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
